Switch from `HttpURLConnection` with `HttpClient`